@@ -4,6 +4,8 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/05/19
+	* Added Global chat and Main chat logging
+	- lowered the priority of the 'logging off during gw' filter
 	* Fixed server crashes when you use long hostnames (/thx to Ancyker)
 	* Removed the wtf-y mmo_char_fromsql_short() from r2527 [ultramage]
 	* Fixed drops of Thanatos Dolor & Thanatos Odium regarding the quest. [SinSloth]
