@@ -1,4 +1,8 @@
 Date	Added
+
+2007/05/19
+	* Enhanced log_athena.conf with global/main chat support [ultramage]
+	- also changed the filter bit values, please reconfigure this option
 2007/04/27
 	* Can't teleport in kh_dun01 [Playtester]
 	* You can now teleport in jupe_core [Playtester]
